# bikemap

./: .gitignore  1-json-primer.md  2-staticmap.md  README.md  demo.json  getData.js  nato.json  staticmap_example.json
cpp/: CMakeLists.txt  README.md  bikemap.cpp
csharp/: README.md  demo.cs  nato.cs
go/: README.md  demo.go  nato.go  ride-altitude-timestamp-name.json
java/: README.md  pom.xml
java/src/main/java/com/stripe/interview/: App.java
java/src/test/java/com/stripe/interview/: AppTest.java
javascript/: README.md  demo.js  nato.js
kotlin/: .gitignore  README.md  build.gradle
kotlin/app/: build.gradle
kotlin/app/src/main/kotlin/com/stripe/interview/: App.kt
kotlin/app/src/test/kotlin/com/stripe/interview/: AppTest.kt
kotlin/gradle/wrapper/: gradle-wrapper.properties
python/: README.md  nato.py
ruby/: README.md  demo.rb  nato.rb
scala/: .gitignore  README.md  build.sbt  ride-simple.json
scala/src/main/scala/com/stripe/interview/: Main.scala
scala/src/test/scala/com/stripe/interview/: MainTest.scala
